@@ -1054,6 +1054,13 @@ int HandleGameKey(int key)
 		KEY_MAC(case KEY_COMMAND+KEY_ALTED+KEY_7:)
 			PlayerCfg.HudMode=(PlayerCfg.HudMode+1)%GAUGE_HUD_NUMMODES;
 			write_player_file();
+			switch (PlayerCfg.HudMode)
+			{
+				case 0: HUD_init_message(HM_DEFAULT, "Standard HUD"); break;
+				case 1: HUD_init_message(HM_DEFAULT, "Alternative HUD #1"); break;
+				case 2: HUD_init_message(HM_DEFAULT, "Alternative HUD #2"); break;
+				case 3: HUD_init_message(HM_DEFAULT, "No HUD"); break;
+			}
 			return 1;
 
 #ifdef NETWORK
