@@ -79,7 +79,7 @@ extern rgb player_rgb[];
 // the top of the window.
 void do_cockpit_window_view(int win, object *viewer, int rear_view_flag, int user, const char *label);
 
-#define GAUGE_HUD_NUMMODES 3
+#define GAUGE_HUD_NUMMODES 4
 
 typedef struct span {
 	int l,r;
